WatchProviderBottomSheetリファクタ

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -9,5 +9,6 @@
   "flatrate": "Flatrate",
   "buy": "Buy",
   "rent": "Rent",
-  "close": "Close"
+  "close": "Close",
+  "noProvider": "There are no providers."
 }
